Replace .trim().isEmpty() with .isBlank() for better whitespace handling in username validation